<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    app:cardCornerRadius="2dp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/infoImageClickableView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_info"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/info_button_content_description"
            app:layout_constraintTop_toTopOf="@id/moreImageClickableView"
            app:layout_constraintBottom_toBottomOf="@id/moreImageClickableView"
            app:layout_constraintEnd_toStartOf="@id/moreImageClickableView"/>

        <ImageView
            android:id="@+id/moreImageClickableView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_more"
            android:contentDescription="@string/more_button_content_description"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAccessibility="no" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp"
            android:textColor="@color/color_text_titles"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/serialNumberImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_serial_number"
            android:contentDescription="@string/barcode_content_description"
            app:layout_constraintStart_toEndOf="@id/imageView"
            app:layout_constraintBottom_toBottomOf="@id/barcodeTextView"
            app:layout_constraintTop_toTopOf="@id/barcodeTextView"/>

        <TextView
            android:id="@+id/barcodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/color_barcode_textview"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/titleTextView"
            app:layout_constraintStart_toEndOf="@id/serialNumberImageView"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dayValueTextView"
            android:text="@string/day_value_textview_text"
            android:textSize="12sp"
            android:textColor="@color/color_value_textview_text"
            app:layout_constraintTop_toBottomOf="@id/barcodeTextView"
            app:layout_constraintStart_toStartOf="@id/dayValueEditText"
            app:layout_constraintBottom_toTopOf="@id/dayValueEditText"/>
        <EditText
            android:id="@+id/dayValueEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_value_edittext_backgroundtint"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/nightValueEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dayValueTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nightValueTextView"
            android:text="@string/night_value_textview_text"
            android:textSize="12sp"
            android:textColor="@color/color_value_textview_text"
            app:layout_constraintTop_toBottomOf="@id/barcodeTextView"
            app:layout_constraintStart_toStartOf="@id/nightValueEditText"
            app:layout_constraintBottom_toTopOf="@id/nightValueEditText" />
        <EditText
            android:id="@+id/nightValueEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_value_edittext_backgroundtint"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/peakValueEditText"
            app:layout_constraintStart_toEndOf="@id/dayValueEditText"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/nightValueTextView"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/peakValueTextView"
            android:text="@string/peak_value_textview_text"
            android:textSize="12sp"
            android:textColor="@color/color_value_textview_text"
            app:layout_constraintTop_toBottomOf="@id/barcodeTextView"
            app:layout_constraintStart_toStartOf="@id/peakValueEditText"
            app:layout_constraintBottom_toTopOf="@id/peakValueEditText"/>
        <EditText
            android:id="@+id/peakValueEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_value_edittext_backgroundtint"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/nightValueEditText"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/peakValueTextView"
            app:layout_constraintEnd_toStartOf="@id/sendImageClickableView"/>

        <ImageView
            android:id="@+id/sendImageClickableView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_send"
            app:layout_constraintStart_toEndOf="@id/peakValueEditText"
            app:layout_constraintTop_toTopOf="@id/dayValueEditText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/send_button_content_description" />

        <ImageView
            android:id="@+id/warningImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_alert"
            android:importantForAccessibility="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/infoTextView"
            app:layout_constraintBottom_toBottomOf="@id/infoTextView"/>

        <TextView
            android:id="@+id/infoTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/warningImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dayValueEditText"
            android:layout_marginTop="12dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>